# gstreamer_tutorial

./: pyrightconfig.json
gst_python/: README.md  app_sink_demo.py  app_src_demo.py  dynamic_selector.py  hello_gst.py  hello_gst_pull.py  toggle_gz_camera.py
gst_python/gtksink/: README.md  mouse_click.py
gst_python/plugin_usage/: read_gstcustommeta.py  simplegstmeta.py
plugins/cpp/: README.md  gstsimple.cpp  gstsimplecppmeta.cpp  meson.build
plugins/cpp/.cache/clangd/index/: gstsimple.cpp.8DA53138B972B665.idx  gstsimplecppmeta.cpp.48EF87DB0E0967EC.idx
plugins/python/: README.md  gzimagesrc.py  simple.py  simplemeta.py
typings/gi/: __init__.pyi
typings/gi/repository/: GLib.pyi  GObject.pyi  Gst.pyi  GstApp.pyi  GstBase.pyi  __init__.pyi
